@@ -7,7 +7,7 @@ use base 'Exporter';
 
 our $installsitearch;
 
-our $VERSION = 6.47;
+our $VERSION = 6.48;
 our @EXPORT_OK = qw(&coro_args $installsitearch);
 
 my %opt;
