@@ -38,7 +38,7 @@ use common::sense;
 
 use Coro ();
 
-our $VERSION = 6.47;
+our $VERSION = 6.48;
 
 =item $l = new Coro::RWLock;
 
