@@ -67,7 +67,7 @@ use Coro::AnyEvent ();
 
 use base Exporter::;
 
-our $VERSION = 6.47;
+our $VERSION = 6.48;
 our @EXPORT_OK = "select";
 
 sub import {
