@@ -38,7 +38,7 @@ use common::sense;
 
 use Coro::Semaphore ();
 
-our $VERSION = 6.47;
+our $VERSION = 6.48;
 
 =item $sig = new Coro::Signal;
 
